# Asta-Robot

./: .gitignore  .replit  AstaEval.txt  README.md  config.py  main.py  main2.py  pyproject.toml  replit.nix  requirements.txt  unknown_errors.txt
.github/workflows/: main.yml  python-app.yml
Asta/: __init__.py  __main__.py
Asta/decorators/: botadmin.py  cek_admin.py  error.py  info_cmd.py  permission.py  pv_or_gc.py
Asta/func/: donghua.py  duration.py  file_size.py  get_top_admins.py  google.py  permission.py  sendGmail.py  tools.py  translate.py
Asta/plugins/: HELP.py  __HELP__.py  __init__.py  admins.py  alive.py  anon_share.py  asupan.py  cek_bot.py  chatbot.py  debug.py  donghua.py  eval.py  filters.py  g_translate.py  gcast.py  ghost.py  google.py  kazefuri.py  monitoring.py  okasta.py  quotly.py  scrape_sharing.py  session_generator.py  staff.py  stickers.py  tag_all.py  tiktok_dl.py  translate.py  user_info.py  yoi_afk.py  yt_dl.py
database/: filters_db.py
decorators/: error.py
lucasgram/: myclient.py
lucasgram/method/: graph.py
lucasgram/methods/: GetAllProfile.py  SendTable.py  TopSender.py  __init__.py  create_text_graph.py  get_top_admins.py  graph.py  send_table.py
method/: __init__.py  lucasgram.py
static/: style.css
templates/: index.html
