[tool.poetry]
name = "repl_nix_Asta-Robot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
Pyrogram = "^2.0.102"
pytz = "^2022.7.1"
bs4 = "^0.0.1"
geopy = "^2.3.0"
requests = "^2.28.2"
Telethon = "^1.27.0"
pykeyboard = "^0.1.5"
lxml = "^4.9.2"
pymongo = "^4.3.3"
motor = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
