[tool.poetry]
name = "repl_nix_Asta-Robot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
geopy = "^2.3.0"
pymongo = "^4.3.3"
Pyrogram = "^2.0.102"
pykeyboard = "^0.1.5"
pyromod = "^2.0.0"
bs4 = "^0.0.1"
requests = "^2.28.2"
lxml = "^4.9.2"
pytz = "^2022.7.1"
Telethon = "^1.27.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
